--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
@@ -8,14 +9,15 @@
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-    <link href="~/Content/site.css" rel="stylesheet" />
+    <link href="~/content/site.css" rel="stylesheet" />
 </head>
+
 <body>
     <div class="container">
         <div class="row">
             <div class="col-md-3">
                 <p class="lead">
-                    <img class="img-responsive" alt="Bethany's Pie Shop'" src="~/Images/bethanylogo.png" />
+                    <img class="img-responsive" alt="Bethany's Pie Shop'" src="~/images/bethanylogo.png" />
                 </p>
             </div>
             <div class="col-md-9">
@@ -24,4 +26,5 @@
         </div>
     </div>
 </body>
+
 </html>
