--- a/BethanysPieShop/Views/Pie/Details.cshtml
+++ b/BethanysPieShop/Views/Pie/Details.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Pie
+﻿@model Pie
 
 <h2>@Model.Name</h2>
 
@@ -12,5 +11,11 @@
         </h3>
         <h4>@Model.ShortDescription</h4>
         <p>@Model.LongDescription</p>
+        <div class="addToCart">
+            <p class="button">
+                <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="AddToShoppingCart"
+                    asp-route-pieId="@Model.PieId">Add to cart</a>
+            </p>
+        </div>
     </div>
 </div>
